# pydata-leaderboard

./: .gitignore  Dockerfile  README.md  azure_credentials.py  entrypoint.sh  example_post.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: python-app.yml
leaderboard/: __init__.py  settings.py  urls.py  utils.py
leaderboard/leaderboard/: settings.py
leaderboard/ranking_app/: admin.py  models.py  serializers.py  urls.py  views.py
leaderboard/ranking_app/migrations/: 0001_initial.py  0002_auto_20201101_0947.py
leaderboard/ranking_app/templates/: dashboard.html  table.html
ranking_app/: models.py  serializers.py  urls.py  views.py
ranking_app/management/commands/: initadmin.py
ranking_app/migrations/: 0003_auto_20201110_0814.py
ranking_app/templates/: base.html  dashboard.html  footer.html  table.html
requirements/: dev-requirements.txt  requirements.txt
tests/: conftest.py  test_models.py  test_views.py
